# grampc

./: CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  algorithm.html  appendix.html  changelog.html  genindex.html  grampc-config-version.cmake  grampc-config.cmake  index.html  install.html  introduction.html  objects.inv  prf-prf.html  problem_formulation.html  pyproject.toml  search.html  searchindex.js  tutorials.html  usage.html
_sources/: algorithm.rst.txt  appendix.rst  appendix.rst.txt  changelog.rst  index.rst  (+8 more)
cpp/: CMakeLists.txt  Makefile
cpp/examples/: CMakeLists.txt
cpp/examples/Mass_Spring_Damper/: CMakeLists.txt  Makefile  main_MSD.cpp  problem_description_MSD.cpp  problem_description_MSD.hpp
cpp/examples/TEMPLATES/: CMakeLists.txt  Makefile  main_TEMPLATE.cpp  problem_description_TEMPLATE.cpp  problem_description_TEMPLATE.hpp
cpp/include/: grampc.hpp  problem_description.hpp
cpp/src/: grampc.cpp  problem_description.cpp
examples/: CMakeLists.txt  Makefile
examples/BallOnPlate/: BallOnPlate_R2013a.slx  BallOnPlate_R2017a.slx  CMakeLists.txt  Makefile  ffct.m  fixedsize_settings.h  initData.m  main_BALL_ON_PLATE.c  probfct_BALL_ON_PLATE.c  startMPC.m
examples/Continuous_vs_Discrete/: README.md  initDataMHE.m  initDataMPC.m  init_plot_mhe.m  probfct_MHE_common.impl.h  probfct_MHE_continuous.c  probfct_MHE_discrete.c  probfct_MPC_common.impl.h  probfct_MPC_continuous.c  probfct_MPC_discrete.c  startMHE.m  startMPC.m  update_plot_mhe.m
examples/Crane_2D/: CMakeLists.txt  Crane_2D_R2013a.slx  Crane_2D_R2017a.slx  Makefile  config_CRANE_2D.cfg  ffct.m  fixedsize_settings.h  initData.m  main.c  main_CRANE_2D.c  probfct.c  probfct_CRANE_2D.c  startMPC.m
examples/Crane_3D/: CMakeLists.txt  Crane_3D_R2013a.slx  Crane_3D_R2017a.slx  Makefile  config_CRANE_3D.cfg  ffct.m  fixedsize_settings.h  initData.m  main.c  main_CRANE_3D.c  probfct.c  probfct_CRANE_3D.c  startMPC.m
examples/DAE_Integrator/: CMakeLists.txt  DAE_Integrator_R2013a.slx  DAE_Integrator_R2017a.slx  Makefile  config_DAE_Integrator.cfg  initData.m  main_DAE_Integrator.c  probfct_DAE_Integrator.c  startMPC.m
examples/Double_Integrator/: CMakeLists.txt  DoubleIntegrator_R2013a.slx  DoubleIntegrator_R2017a.slx  Makefile  config_Double_Integrator.cfg  ffct.m  initData.m  initData_OCP.m  main_DOUBLE_INTEGRATOR.c  main_OCP_DOUBLE_INTEGRATOR.c  probfct_DOUBLE_INTEGRATOR.c  probfct_DOUBLE_INTEGRATOR_OCP.c  startMPC.m  startOCP.m
examples/Helicopter/: CMakeLists.txt  Helicopter_R2013a.slx  Helicopter_R2017a.slx  Makefile  fixedsize_settings.h  initData.m  main_HELICOPTER.c  probfct_HELICOPTER.c  startMPC.m
examples/Helicopter_Discrete/: CMakeLists.txt  Helicopter_R2017a.slx  Makefile  ffct.m  fixedsize_settings.h  initData.m  main_HELICOPTER.c  probfct_HELICOPTER.c  startMPC.m
examples/Mass_Spring_Damper/: CMakeLists.txt  MSD_R2013a.slx  MSD_R2017a.slx  Makefile  ffct.m  initData.m  main.c  main_MSD.c  probfct_MSD.c  startMPC.m
examples/NLChain/: CMakeLists.txt  Makefile  NLChain_4_R2013a.slx  NLChain_4_R2017a.slx  ffct.m  initData.m  main_NLChain_10.c  main_NLChain_12.c  main_NLChain_4.c  main_NLChain_6.c  main_NLChain_8.c  probfct_NLCHAIN_10.c  probfct_NLCHAIN_12.c  probfct_NLCHAIN_4.c  probfct_NLCHAIN_6.c  probfct_NLCHAIN_8.c  startMPC.m
examples/PMSM/: CMakeLists.txt  Makefile  PMSM_R2013a.slx  PMSM_R2017a.slx  ffct.m  fixedsize_settings.h  initData.m  main_PMSM.c  probfct_PMSM.c  startMPC.m
examples/Quadrotor/: CMakeLists.txt  Makefile  Quadrotor_R2013a.slx  Quadrotor_R2017a.slx  ffct.m  fixedsize_settings.h  initData.m  main.c  main_QUADROTOR.c  probfct_QUADROTOR.c  startMPC.m
examples/Reactor_CSTR/: CMakeLists.txt  CSTR_R2013a.slx  CSTR_R2017a.slx  Makefile  ffct.m  fixedsize_settings.h  initData.m  initDataMHE.m  main.c  main_REACTOR_CSTR.c  probfct_REACTOR_CSTR.c  probfct_REACTOR_CSTR_MHE.c  startMHE.m  startMPC.m
examples/Reactor_PDE/: CMakeLists.txt  Makefile  Reachtor_PDE_R2013a.slx  Reachtor_PDE_R2017a.slx  Reactor_PDE_R2013a.slx  Reactor_PDE_R2017a.slx  fixedsize_settings.h  initData.m  main.c  main_REACTOR_PDE.c  probfct.c  probfct_REACTOR_PDE.c  startMPC.m  statProfile.m
examples/Robot/: CMakeLists.txt  Makefile  forward_kinematics.m  initData_OCP.m  main_OCP_ROBOT.c  plot_configuration.m  probfct_ROBOT.c  startOCP.m
examples/TEMPLATES/: CMakeLists_TEMPLATE.txt  Makefile_TEMPLATE  configFile_TEMPLATE.cfg  ffct_TEMPLATE.m  fixedsize_settings.h  grampc_R2010a_TEMPLATE.mdl  grampc_R2010b_TEMPLATE.mdl  grampc_R2013a_TEMPLATE.slx  grampc_R2017a_TEMPLATE.slx  initData_TEMPLATE.m  initData_TEMPLATE_CONFIG.m  main_OCP_TEMPLATE.c  main_OCP_TEMPLATE_CONFIG.c  main_TEMPLATE.c  main_TEMPLATE_CONFIG.c  probfct_TEMPLATE.c  probfct_TEMPLATE_finite_diff.c  startMPC_TEMPLATE.m  startOCP_TEMPLATE.m
examples/VTOL/: CMakeLists.txt  Makefile  VTOL_R2013a.slx  VTOL_R2017a.slx  ffct.m  fixedsize_settings.h  initData.m  main.c  main_VTOL.c  probfct_VTOL.c  startMPC.m
examples/Vehicle/: CMakeLists.txt  Makefile  Vehicle_R2013a.slx  Vehicle_R2017a.slx  ffct.m  fixedsize_settings.h  initData.m  main_VEHICLE.c  probfct_VEHICLE.c  startMPC.m
examples/bryson2xint/: initData_OCP.m  probfct_bryson2xint.c  startOCP.m
python/: CMakeLists.txt  pygrampc-config.cmake
python/examples/Crane2D/: CMakeLists.txt  Crane2D.cpp  Crane2D.hpp  Crane2D.json  Crane2D.py  crane_problem_py.py  pyproject.toml
python/examples/DoubleIntegrator/: DoubleIntegrator.json  DoubleIntegrator.py
python/examples/TEMPLATES/: CMakeLists.txt  options_template.json  pyproject.toml  template_problem_description.cpp  template_problem_description.hpp
python/examples/mobile_robot/: CMakeLists.txt  binding.cpp  mobile_robot_problem_description.cpp  mobile_robot_problem_description.hpp  pyproject.toml  start_mpc.py
python/include/: problem_description.hpp  pygrampc_interface.hpp  pygrampc_problem_description.hpp  pygrampc_types.hpp
python/pygrampc/: __init__.py  _core.pyi  grampc.py
python/src/: CMakeLists.txt  binding.cpp  pygrampc_interface.cpp  pygrampc_problem_description.cpp  pygrampc_types.cpp
(+178 files in other folders)
