add_subdirectory(BallOnPlate)
add_subdirectory(bryson2xint)
add_subdirectory(Crane_2D)
add_subdirectory(Crane_3D)
add_subdirectory(DAE_Integrator)
add_subdirectory(Double_Integrator)
add_subdirectory(Helicopter)
add_subdirectory(Helicopter_Discrete)
add_subdirectory(Mass_Spring_Damper)
add_subdirectory(NLChain)
add_subdirectory(PMSM)
add_subdirectory(Quadrotor)
add_subdirectory(Reactor_CSTR)
add_subdirectory(Reactor_PDE)
add_subdirectory(Robot)
add_subdirectory(Vehicle)
add_subdirectory(VTOL)